--- a/templates/webserver/webserver-service.yaml
+++ b/templates/webserver/webserver-service.yaml
@@ -14,10 +14,17 @@ metadata:
 {{- with .Values.labels }}
 {{ toYaml . | indent 4 }}
 {{- end }}
+
+{{- if .Values.awsEnabled }}
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+{{- end }}
 spec:
+{{- if .Values.awsEnabled }}
   type: LoadBalancer
+{{- else}}
+  type: ClusterIP
+{{- end }}
   selector:
     tier: airflow
     component: webserver
@@ -26,4 +33,4 @@ spec:
     - name: airflow-ui
       protocol: TCP
       port: {{ .Values.ports.airflowUI }}
-      targetPort: {{ .Values.ports.airflowUI }} 
+      targetPort: {{ .Values.ports.airflowUI }}
