--- a/templates/webserver/webserver-service.yaml
+++ b/templates/webserver/webserver-service.yaml
@@ -30,7 +30,9 @@ spec:
     component: webserver
     release: {{ .Release.Name }}
   ports:
-    - name: airflow-ui
-      protocol: TCP
-      port: {{ .Values.ports.airflowUI }}
-      targetPort: {{ .Values.ports.airflowUI }}
+  - name: http
+    port: 80
+    targetPort: {{ .Values.ports.airflowUI }}
+  - name: https
+    port: 443
+    targetPort: {{ .Values.ports.airflowUI }}
