--- a/templates/workers/worker-deployment.yaml
+++ b/templates/workers/worker-deployment.yaml
@@ -66,7 +66,7 @@ spec:
       initContainers:
       {{- if and $persistence .Values.workers.persistence.fixPermissions }}
         - name: volume-permissions
-          image: {{ template "airflow_image" . }}
+          image: {{ template "default_airflow_image" . }}
           imagePullPolicy: {{ .Values.images.airflow.pullPolicy }}
           command:
             - chown
@@ -80,7 +80,7 @@ spec:
               mountPath: {{ template "airflow_logs" . }}
       {{- end }}
         - name: wait-for-airflow-migrations
-          image: {{ template "airflow_image" . }}
+          image: {{ template "default_airflow_image" . }}
           imagePullPolicy: {{ .Values.images.airflow.pullPolicy }}
           args: ["airflow-migration-spinner", "--timeout=60"]
           env:
