--- a/templates/webserver/webserver-service.yaml
+++ b/templates/webserver/webserver-service.yaml
@@ -15,7 +15,8 @@ metadata:
 {{ toYaml . | indent 4 }}
 {{- end }}
 spec:
-  type: ClusterIP
+  # type: ClusterIP
+  type: NodePort
   selector:
     tier: airflow
     component: webserver
